# parallel-course-projects

./: .gitignore
apsp-cuda-mpi/: CMakeLists.txt
apsp-cuda-mpi/include/: DPtr.h  DPtr_nocuda.h  algo.h  cuda_handler.h  cuda_utils.h  kernel_wrp.h  mpi_handler.h  tasks.h  test.h  utils.h
apsp-cuda-mpi/report/: report.tex
apsp-cuda-mpi/src/: DPtr.cu  DPtr.cu_RM  algo.cpp  cudaPtr.h  kernels.cu  kernels.h  kernels_test.cu  main.cpp  makeGraph.cpp  mpi_handler.cpp  run_gpu.cpp  run_gpu.cu  run_gpu_mpi.cpp  run_tests.cpp  slave.cpp  tests.cpp  utils.cu
apsp-cuda-mpi/src/analysis/: analysis.m  logs.mat  run1.eps
bitonic_sort/: CMakeLists.txt  README
bitonic_sort/logs/logDiades/: omp.log2  pthread.log2
bitonic_sort/logs/logDiades/proc/: pthread.csv
bitonic_sort/matlab/: importedData.mat  nonseq.m  process.m
floyd-warshall_cuda/: CMakeLists.txt
floyd-warshall_cuda/log/: log1  log3
floyd-warshall_cuda/nvvp/: phase3_multiy  phase3_multiy_ensure_nobankconflict_nodifference  phase3_pipe_busy  phase3m_memband
floyd-warshall_cuda/report/source/: fw_accessPattern.eps  fw_accessPattern.graphml  proj3.lyx
floyd-warshall_cuda/src/: main.cpp  makeGraph.cpp  run_gpu.cu
floyd-warshall_cuda/src/analysis/: run2.eps  run2_full.eps
kNN_mpi/: CMakeLists.txt
kNN_mpi/include/: mpi_transfers.h
kNN_mpi/logs/: log0  log2  log3  log4  log5  results4
kNN_mpi/logs/grid_results/old_results/: 3274195.cream01.grid.auth.gr.log_1n4p  jobs_with_procDistributions
kNN_mpi/logs/grid_results/results2/: 3277751.cream01.grid.auth.gr.log_n2p1  3277941.cream01.grid.auth.gr.log_n2p1  3277942.cream01.grid.auth.gr.log_n2p2  3277943.cream01.grid.auth.gr.log_n4p2  3278146.cream01.grid.auth.gr.log_n2p8
kNN_mpi/logs/grid_results/results3/: 3278413.cream01.grid.auth.gr.log_n2p2  3278826.cream01.grid.auth.gr.log_n2p1
kNN_mpi/report/: cube_structure.graphml  progFlow.graphml
kNN_mpi/src/: kNNAlgo.cpp  utils.cpp
kNN_mpi/src/analysis/: grid_results.mat  gridanal.m  parallel1times.mat  ptComm_t-m_parallelShared.eps
kNN_mpi/src/analysis/grid/: search2_t-P_N.eps  search_t-N_P.eps  search_t-P_N.eps
proj1/: CMakeLists.txt  sample_bitonic.c
proj1/include/: thread_pool.h
proj1/logs/logDiades/: qsort.log2
proj1/logs/logDiades/proc/: omp.csv  qsort.csv  sample-bitonic.csv
proj1/matlab/: compare.eps  findDupl.m  ompTime.eps  qsort.eps  serBitonic.eps  threadTime.eps
proj1/src/: batch_experiment.sh  pbitonic-omp.cpp  pbitonic-stdthread.cpp  pbitonic-stdthread_noxtraelts.cpp  thread_pool.cpp
proj2/: CMakeLists.txt
proj2/include/: kNNAlgo.h  mpi_handler.h  mpi_transfers.h  utils.h
proj2/logs/: results2  results3  results5
proj2/logs/grid_results/old_results/: 3274190.cream01.grid.auth.gr.log_4n4p  3274191.cream01.grid.auth.gr.log_2n4p  3274196.cream01.grid.auth.gr.log_serial
proj2/logs/grid_results/results2/: 3277945.cream01.grid.auth.gr.log_n4p4
proj2/logs/grid_results/results3/: 3278420.cream01.grid.auth.gr.log_n2p4
proj2/report/: #kNNreport.lyx#  kNNreport.lyx  kNNreport.lyx~
proj2/src/: batch.sh  kNNAlgo.cpp  kNN_main.cpp  kNN_single_main.cpp  mpi_handler.cpp  test_kNNsingle.cpp  test_mpi_transfers.cpp  utils.cpp
proj2/src/analysis/: analysis.m  ptComm_t-N_parallelShared.eps  search_t-N_parallelShared.eps  search_t-N_serial.eps  search_t-m_parallelShared.eps  search_t-m_serial.eps  serial1times.mat  totComm_t-m_parallelShared.eps
proj2/src/analysis/grid/: ptComm_t-N_P.eps  ptComm_t-P_N.eps
proj3/: CMakeLists.txt
proj3/include/: DPtr.cuh  utils.h
proj3/log/: log2
proj3/src/: batch.sh  kernels.cu  main.cpp  main.cu  makeGraph.cpp  run_cpu.cpp  run_gpu.cu  utils.cu
proj3/src/analysis/: untitled.eps
